<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.quizapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundColor"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp">

        <!--Question 1 layout-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/shape"
            android:orientation="vertical"
            android:padding="5dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="right"
                android:src="@drawable/android_logo_png20_right" />

            <TextView
                style="@style/HeaderTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_1" />

            <TextView
                style="@style/Questions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_1_text" />

            <EditText
                android:id="@+id/answer_q1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </LinearLayout>

        <!--Question 2 Layout-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/shape"
            android:orientation="vertical"
            android:padding="5dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="left"
                android:scaleX="-1"
                android:src="@drawable/android_logo_png20_right" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/q_2"
                    style="@style/HeaderTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question_2" />

                <TextView
                    android:id="@+id/question_2"
                    style="@style/Questions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/q_2"
                    android:text="@string/question_2_text" />

                <CheckBox
                    android:id="@+id/answer_error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/question_2"
                    android:text="@string/q2_error_correct" />

                <CheckBox
                    android:id="@+id/answer_chat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/question_2"
                    android:layout_toRightOf="@id/answer_error"
                    android:text="@string/q2_chat_incorrect" />

                <CheckBox
                    android:id="@+id/answer_warning"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/question_2"
                    android:layout_toRightOf="@id/answer_chat"
                    android:text="@string/q2_warning_correct" />

                <CheckBox
                    android:id="@+id/answer_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/question_2"
                    android:layout_toRightOf="@id/answer_warning"
                    android:text="@string/q2_info_incorrect" />
            </RelativeLayout>
        </LinearLayout>

        <!--Question 3 layout-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/shape"
            android:orientation="vertical"
            android:padding="5dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="right"
                android:src="@drawable/android_logo_png20_right" />

            <TextView
                style="@style/HeaderTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_3" />

            <TextView
                style="@style/Questions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_3_text" />

            <RadioGroup
                android:id="@+id/radio_group_q3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/void_correct"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/q3_correct" />

                <RadioButton
                    android:id="@+id/void_incorrect"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/q3_incorrect" />
            </RadioGroup>
        </LinearLayout>

        <!--Question 4 Layout-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/shape"
            android:orientation="vertical"
            android:padding="5dp"
            android:paddingBottom="16dp"
            android:paddingTop="16dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="left"
                android:scaleX="-1"
                android:src="@drawable/android_logo_png20_right" />


            <TextView
                android:id="@+id/q_4"
                style="@style/HeaderTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_4" />

            <TextView
                android:id="@+id/question_4"
                style="@style/Questions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_4_text" />

            <RadioGroup
                android:id="@+id/radio_group_q4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/answer_true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q4_correct" />

                <RadioButton
                    android:id="@+id/answer_false"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q4_incorrect" />
            </RadioGroup>

        </LinearLayout>

        <!--Question 5 Layout-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="16dp"
            android:background="@drawable/shape"
            android:orientation="vertical"
            android:padding="5dp"
            android:paddingBottom="16dp"
            android:paddingTop="16dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="right"
                android:src="@drawable/android_logo_png20_right" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/q_5"
                    style="@style/HeaderTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question_5" />

                <TextView
                    android:id="@+id/question_5"
                    style="@style/Questions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/q_5"
                    android:text="@string/question_5_text" />

                <CheckBox
                    android:id="@+id/answer_local"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/question_5"
                    android:text="@string/q5_local_correct" />

                <CheckBox
                    android:id="@+id/answer_national"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/question_5"
                    android:layout_toRightOf="@id/answer_local"
                    android:text="@string/q5_national_incorrect" />

                <CheckBox
                    android:id="@+id/answer_global"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/question_5"
                    android:layout_toRightOf="@id/answer_national"
                    android:text="@string/q5_global_correct" />

                <CheckBox
                    android:id="@+id/answer_international"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/question_5"
                    android:layout_toRightOf="@id/answer_global"
                    android:text="@string/q5_international_incorrect" />
            </RelativeLayout>
        </LinearLayout>

        <!--Question 6 Layout-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/shape"
            android:orientation="vertical"
            android:padding="5dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="left"
                android:scaleX="-1"
                android:src="@drawable/android_logo_png20_right" />

            <TextView
                style="@style/HeaderTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_6" />

            <TextView
                style="@style/Questions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_6_text" />

            <EditText
                android:id="@+id/answer_q6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </LinearLayout>

        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="submitButton"
            android:text="@string/submit_button"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/reset_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:onClick="resetButton"
            android:text="@string/reset_button"
            android:textColor="#FFFFFF" />

    </LinearLayout>

</ScrollView>
